examples/invalid/07_OrphanInstance.lune
module BadOrphan exposing (x)

instance Functor List where
  fmap = \f xs -> xs

x : Unit
x =
  unit

